# type-weave

./: .cargo-rdme.toml  Cargo.toml  README.md
type-weave/: Cargo.toml
type-weave-derive/: Cargo.toml
type-weave-derive/src/: lib.rs  parse.rs
type-weave/examples/: simple.rs
type-weave/src/: ext.rs  lib.rs
