[workspace]
resolver = "2"
members = [
  "type-weave",
  "type-weave-derive"
]

[workspace.package]
authors = ["Diego Sesmas Estrada <diegos7167@gmail.com>"]
license = "MIT"
keywords = ["merge", "layer", "join"]
description = "Helpers for joining custom data types"
repository = "https://github.com/TheCodeSquid/type-weave"
readme = "README.md"
