[package]
name = "type-weave-derive"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
