[package]
name = "type-weave"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["derive"]
derive = ["dep:type-weave-derive"]

[dependencies]
type-weave-derive = { path = "../type-weave-derive", optional = true }
