[package]
name = "type-weave"
edition = "2021"
version = "0.3.0"
documentation = "https://docs.rs/type-weave"
authors.workspace = true
license.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["derive"]
derive = ["dep:type-weave-derive"]

[dependencies]
type-weave-derive = { version = "0.2.0", path = "../type-weave-derive", optional = true }
